# singletons-state

./: .gitignore  README.md  singletons-state.cabal
src/SingState/Control/: StateMachine.hs
src/SingState/Examples/: ATM1.hs
src/SingState/Examples/Data/: Nat.hs  Vect.hs
