name:                singletons-state
version:             0.0.0.1
synopsis:            Dependently typed state machines using singletons 
-- description:
homepage:            https://github.com/rpeszek/singletons-state#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Peszek
maintainer:          example@example.com
copyright:           2018 Robert Peszek
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/githubuser/singletons-state

library
  hs-source-dirs:      src
  exposed-modules:     SingState.Control.StateMachine 
  other-Modules:       SingState.Examples.Data.Nat
                       , SingState.Examples.Data.Vect
                       , SingState.Examples.ATM1
  build-depends:       base >= 4.7 && < 5
                       , singletons
  default-language:    Haskell2010

test-suite IdrisTddNotes-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , singletons-state
  default-language: Haskell2010
